QR 생성 API 구현 (#3) - QR 생성 로직 수정 및 예외 처리 추가